--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
 
   </head>
   <body>
-    <h1>🚴🏼‍♀️ Bikewatching</h1>
+
+    <header>
+      <h1>🚴🏼‍♀️ Bikewatching</h1>
+      <label style="margin-left:auto;">
+        Filter by time:
+        <input id="time-slider" type="range" min="-1" max="1440" value="-1" />
+        <time id="selected-time" style="display:block;"></time>
+        <em id="any-time" style="display:block; color:#888; font-style:italic;">(any time)</em>
+      </label>
+    </header>
     <div id="map">
       <svg></svg>
     </div>
